# ChessPlusPlus

./: CMakeLists.txt  README.md  main.cpp
ChessGame/: ChessAI.hpp  ChessAIException.hpp  ChessBoard.hpp  ChessCell.hpp  ChessCellState.hpp  ChessException.hpp  ChessGameManager.cpp  ChessGameManager.hpp  ChessGameState.hpp  ChessGameStateFactory.cpp  ChessGameStateFactory.hpp  ChessMove.hpp  ChessPiece.cpp  ChessPiece.hpp  ChessPieceMobility.hpp
ChessUtility/: PairHash.hpp
Input/: InputReader.hpp  InputReaderAI.cpp  InputReaderAI.hpp  InputReaderHuman.cpp  InputReaderHuman.hpp  InputRequest.hpp
StandardChess/: StandardChessBoard.cpp  StandardChessBoard.hpp  StandardChessCell.cpp  StandardChessCell.hpp  StandardChessGameState.cpp  StandardChessGameState.hpp  StandardChessMoveData.hpp
StandardChess/StandardChessAIs/: IterativeDeepeningAI.cpp  IterativeDeepeningAI.hpp  MinMaxAI.cpp  MinMaxAI.hpp  RandomAI.cpp  RandomAI.hpp
StandardChess/StandardChessPieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
